--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.6",
+    "@tailwindcss/typography": "^0.5.16",
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -24,7 +29,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
 }
