--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.6",
+    "@clerk/nextjs": "^6.14.3",
+    "@prisma/client": "^6.6.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/typography": "^0.5.16",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "supabase": "^2.20.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
