--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "ngrok": "^5.0.0-beta.2",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
