--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.14.3",
+    "@clerk/nextjs": "^6.18.2",
     "@prisma/client": "^6.6.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/typography": "^0.5.16",
+    "jest": "^29.7.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "ngrok": "^5.0.0-beta.2",
