--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "seed": "ts-node --project app/scripts/tsconfig.json app/seed/seed.ts",
     "gate": "ngrok http --url=grackle-talented-only.ngrok-free.app 3000",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.2",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-select": "^2.2.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/typography": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jest": "^29.7.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -26,6 +30,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "supabase": "^2.20.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -39,6 +44,7 @@
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
