--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "supabase": "^2.20.5",
+    "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
